--- a/src/styles.css
+++ b/src/styles.css
@@ -73,7 +73,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40rem;
+  width: 40vw;
   height: 2.1rem;
   background-color: white;
 }
@@ -101,4 +101,12 @@
   border: none;
   outline: none;
   margin-top: 4px;
+}
+@media only screen and (max-width: 840px) {
+  .nav-body {
+    width: 100%;
+  }
+  .logoHeading {
+    font-size: 24px;
+  }
 }
