--- a/src/styles.css
+++ b/src/styles.css
@@ -107,6 +107,37 @@
   box-shadow: 0 0 6px 0px black;
   width: 40vw;
 }
+.range-value {
+  position: relative;
+  top: -50%;
+}
+.range-value span {
+  width: 30px;
+  height: 24px;
+  line-height: 24px;
+  text-align: center;
+  background: #03a9f4;
+  color: #fff;
+  font-size: 12px;
+  display: block;
+  position: absolute;
+  left: 50%;
+  transform: translate(8px, -8px);
+  border-radius: 6px;
+}
+.range-value span:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: 10px solid #03a9f4;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  margin-top: -1px;
+}
 @media only screen and (max-width: 840px) {
   .nav-body {
     width: 100%;
