--- a/src/styles.css
+++ b/src/styles.css
@@ -107,6 +107,92 @@
   box-shadow: 0 0 6px 0px black;
   width: 40vw;
 }
+input[type="range"] {
+  height: 11px;
+  -webkit-appearance: none;
+  margin: 10px 24px;
+  width: 25%;
+}
+input[type="range"]:focus {
+  outline: none;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 16px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px #000000;
+  background: #b6b6b6;
+  border-radius: 25px;
+  border: 1px solid #8a8a8a;
+}
+input[type="range"]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #828282;
+  border: 1px solid #8a8a8a;
+  height: 24px;
+  width: 35px;
+  border-radius: 6px;
+  background: #dadada;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -5px;
+}
+input[type="range"]:focus::-webkit-slider-runnable-track {
+  background: #b6b6b6;
+}
+input[type="range"]::-moz-range-track {
+  width: 100%;
+  height: 16px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px #000000;
+  background: #b6b6b6;
+  border-radius: 25px;
+  border: 1px solid #8a8a8a;
+}
+input[type="range"]::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #828282;
+  border: 1px solid #8a8a8a;
+  height: 24px;
+  width: 35px;
+  border-radius: 6px;
+  background: #dadada;
+  cursor: pointer;
+}
+input[type="range"]::-ms-track {
+  width: 100%;
+  height: 16px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type="range"]::-ms-fill-lower {
+  background: #b6b6b6;
+  border: 1px solid #8a8a8a;
+  border-radius: 50px;
+  box-shadow: 0px 0px 0px #000000;
+}
+input[type="range"]::-ms-fill-upper {
+  background: #b6b6b6;
+  border: 1px solid #8a8a8a;
+  border-radius: 50px;
+  box-shadow: 0px 0px 0px #000000;
+}
+input[type="range"]::-ms-thumb {
+  margin-top: 1px;
+  box-shadow: 1px 1px 1px #828282;
+  border: 1px solid #8a8a8a;
+  height: 24px;
+  width: 35px;
+  border-radius: 6px;
+  background: #dadada;
+  cursor: pointer;
+}
+input[type="range"]:focus::-ms-fill-lower {
+  background: #b6b6b6;
+}
+input[type="range"]:focus::-ms-fill-upper {
+  background: #b6b6b6;
+}
 .range-value {
   position: relative;
   top: -50%;
