--- a/src/styles.css
+++ b/src/styles.css
@@ -2,9 +2,11 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons+Two+Tone");
 @import url("https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 .App {
   font-family: sans-serif;
   text-align: center;
+  font-family: "Poppins", sans-serif;
 }
 * {
   margin: 0;
@@ -138,6 +140,18 @@
   transform: translate(29px, -172px) rotate(-45deg);
   font-size: 3rem;
   color: var(--danger);
+}
+.filterbox {
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-top: none;
+  padding: 8px;
+  height: 100vh;
+  position: sticky;
+  text-align: start;
+  top: 0;
+}
+.filterbox > label {
+  display: block;
 }
 @media only screen and (max-width: 840px) {
   .nav-body {
