--- a/src/styles.css
+++ b/src/styles.css
@@ -47,6 +47,8 @@
   border: none;
   outline: none;
   font-weight: bold;
+  margin-left: 10px;
+  cursor: pointer;
 }
 .btn-addtoCart {
   padding: 8px;
