--- a/src/styles.css
+++ b/src/styles.css
@@ -290,6 +290,7 @@
   position: fixed;
   bottom: 4rem;
   left: 50%;
+  z-index: 4;
 }
 .Login-container {
   background-image: url("https://wallpaperaccess.com/full/2593042.jpg");
