--- a/src/styles.css
+++ b/src/styles.css
@@ -549,8 +549,37 @@
   padding: 1rem;
   width: 30vw;
 }
+.wrapper {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.payment-success {
+  padding: 1rem;
+  border: 2px solid black;
+}
+.payment-success > .tick {
+  width: 30px;
+  height: 30px;
+}
+.payment-success > .text {
+  margin-bottom: 1rem 0;
+}
+.payment-success > button {
+  background-color: green;
+  color: white;
+  outline: none;
+  border: none;
+  padding: 10px 132px;
+  font-size: 18px;
+  margin: 1rem;
+  cursor: pointer;
+}
 @media only screen and (max-width: 840px) {
-  .Search{
+  .Search {
     display: none;
   }
   .Search-Below {
