--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,7 @@
   background-color: var(--primary);
   color: white;
   padding: 0 20px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
 .nav-body {
   display: flex;
