--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,10 @@ body::-webkit-scrollbar-thumb {
   border-radius: 10px;
 }
 
+.pointer{
+  cursor: pointer;
+}
+
 input[type="radio"],input[type="checkbox"] {
   cursor: pointer;
   margin-right: 10px;
@@ -182,6 +186,9 @@ button{
 }
 .icon-color-gray {
   color: var(--secondary);
+}
+.icon-mt-5 {
+margin-top: 5px;
 }
 .icon-color-white {
   color: white;
@@ -353,6 +360,9 @@ button{
   padding: 10px;
   width: 44vw;
   border: 1px solid rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .sortBox,
 .filterBox {
@@ -628,7 +638,7 @@ button{
   font-size: 16px;
 }
 .button-box {
-  margin-top: 20px;
+  margin-top: 15px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -652,12 +662,47 @@ button{
   color: white;
   cursor: pointer;
 }
+.btn-address-delete {
+  margin-left: 10px;
+  border-radius: 7px;
+  border: none;
+  padding: 6px 18px;
+  font-size: 18px;
+  background-color: var(--danger);
+  color: white;
+  cursor: pointer;
+}
+.delete-btn {
+  border-radius: 7px;
+  border: none;
+  padding: 10px 18px;
+  font-size: 18px;
+  background-color: var(--danger);
+  color: white;
+  cursor: pointer;
+}
+.warning-btn {
+  margin-left: 10px;
+  border-radius: 7px;
+  border: none;
+  padding: 10px 18px;
+  font-size: 18px;
+  background-color: #ffc107;
+  cursor: pointer;
+}
 .choose-addr {
   display: flex;
   align-items: center;
   justify-content: flex-start;
   margin-top: 1rem;
 }
+
+.choose-addr-border {
+  padding: 1rem;
+  border: 1px solid #dadada;
+  border-radius: 4px;
+}
+
 .choose-addr > input {
   margin-right: 1rem;
 }
@@ -669,14 +714,6 @@ button{
 .addr-label {
   display: block;
   text-align: start;
-}
-.btn-add-address {
-  border: none;
-  font-weight: bold;
-  font-size: 17px;
-  margin-top: 1rem;
-  padding: 5px;
-  cursor: pointer;
 }
 .btn-close {
   display: block;
@@ -870,9 +907,6 @@ button{
     width: 300px;
     height: 306px;
     object-fit: contain;
-  }
-  .avatar-circleIcon {
-    padding: 3px 12px;
   }
   .user-details-box {
     width: 80vw;
